--- a/cookbook/amendment_splitter.ipynb
+++ b/cookbook/amendment_splitter.ipynb
@@ -80,41 +80,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79cd031d",
+   "metadata": {},
+   "source": [
+    "# Splitting"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
+   "id": "f39f593b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_deepseek import ChatDeepSeek\n",
+    "from langchain_core.prompts.chat import ChatPromptTemplate\n",
+    "\n",
+    "from puku_core.graphs.knowledge_trees.types import MarkdownUpdateRequest\n",
+    "from puku_core.documents.markdown import parse, render"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e9a9581e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()  # Loads from .env file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "29e2e95e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = ChatPromptTemplate.from_messages(\n",
+    "    messages=[\n",
+    "        (\n",
+    "            \"system\",\n",
+    "            \"\"\"You are the best knowledge splitter. You have an article and a few sub-articles. \\\n",
+    "                Your task is to split new knowledge between article itself and its edges. For that, you are given of edges description and article itself.\n",
+    "                \"\"\",\n",
+    "        ),\n",
+    "        (\n",
+    "            \"user\",\n",
+    "            \"\"\"Article: {node}\n",
+    "\n",
+    "Edges (or subarticles): each have unique id:\n",
+    "{edges_description}\n",
+    "\n",
+    "Amendment to be splitted:\n",
+    "{amendment}\n",
+    "\"\"\",\n",
+    "        ),\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "32eedcf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "splitter = ChatModelAmendmentSplitter(\n",
+    "    prompt=prompt, chat_model=ChatDeepSeek(model=\"deepseek-chat\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3bd2367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amendment = \"\"\"\n",
+    "Prior to its formal description, the fossil material was first reported in two Society of Vertebrate Paleontology conference abstracts in 2015 and 2024.[2][3]\n",
+    "\n",
+    "In 2025, Yoshitsugu Kobayashi, Darla Zelenitsky, Anthony Fiorillo, and Tsogtbaatar Chinzorig coauthored a scientific paper in the academic journal iScience. Herein the authors described Duonychus tsogtbaatari as a new genus and species of therizinosaurs, establishing this specimen (MPC-D 100/85) as the holotype. The generic name, Duonychus, combines the Latin word duo, meaning \"two\" with the Ancient Greek ὄνυξ (ónux), meaning \"claw\", in reference to the two-fingered hand of the taxon. The specific name, tsogtbaatari, honors Mongolian paleontologist Khishigjav Tsogtbaatar, a former director of the Institute of Paleontology.[1][4]\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4bb5677c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "update_request = MarkdownUpdateRequest(node=root, amendment=parse(amendment))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "da7e3807",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "split = splitter.invoke(update_request)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6c7ff22f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[description]: edge \"689654547144814428\"\n",
-      "How does it look\n",
-      "\n",
-      "[Discovery]: edge \"174022040192645511\"\n",
-      "Discovery and naming\n",
-      "\n",
+      "<p>Prior to its formal description, the fossil material was first reported in two Society of Vertebrate Paleontology conference abstracts in 2015 and 2024. In 2025, Yoshitsugu Kobayashi, Darla Zelenitsky, Anthony Fiorillo, and Tsogtbaatar Chinzorig coauthored a scientific paper in the academic journal iScience. Herein the authors described Duonychus tsogtbaatari as a new genus and species of therizinosaurs, establishing this specimen (MPC-D 100/85) as the holotype. The specific name, tsogtbaatari, honors Mongolian paleontologist Khishigjav Tsogtbaatar, a former director of the Institute of Paleontology.</p>\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(ChatModelAmendmentSplitter.edges_description(root))"
+    "print(render(list(split.children.values())[1]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b9a5236",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a8ae77c1",
+   "id": "5a13f374",
    "metadata": {},
    "outputs": [],
    "source": []
