--- a/cookbook/amendment_splitter.ipynb
+++ b/cookbook/amendment_splitter.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "f39f593b",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d3bd2367",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "da7e3807",
    "metadata": {},
    "outputs": [],
@@ -202,27 +202,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "6c7ff22f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<p>Prior to its formal description, the fossil material was first reported in two Society of Vertebrate Paleontology conference abstracts in 2015 and 2024. In 2025, Yoshitsugu Kobayashi, Darla Zelenitsky, Anthony Fiorillo, and Tsogtbaatar Chinzorig coauthored a scientific paper in the academic journal iScience. Herein the authors described Duonychus tsogtbaatari as a new genus and species of therizinosaurs, establishing this specimen (MPC-D 100/85) as the holotype. The specific name, tsogtbaatari, honors Mongolian paleontologist Khishigjav Tsogtbaatar, a former director of the Institute of Paleontology.</p>\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(render(list(split.children.values())[1]))"
+    "# print(render(list(split.children.values())[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a13f374",
+   "metadata": {},
+   "source": [
+    "# Visualizing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "51293534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from puku.documents.obsidian import dump_knowledge_tree"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a13f374",
+   "id": "ccc24e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dump_knowledge_tree(node=root, path=\"/home/curlinkw/workspace/obsidian_vaults/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1de1022",
    "metadata": {},
    "outputs": [],
    "source": []
